--- a/app/views/campaigns/new_brand_payment.html.erb
+++ b/app/views/campaigns/new_brand_payment.html.erb
@@ -8,7 +8,7 @@
 
       <%= render 'shared/show_errors', :object => @campaign%>
 
-      <div class="text-pink">PAYMENT</div>
+      <div class="payment font-color-pink">PAYMENT</div>
 
       <div class="payment-form">
 
