--- a/app/views/payments/brand_index.html.erb
+++ b/app/views/payments/brand_index.html.erb
@@ -73,12 +73,20 @@
         });
 
         $('#export_payments').click(function() {
-            var payment_ids = [];
-            $('.squaredFour input:checked').each(function() {
-                payment_ids.push($(this).data('id'));
-            });
 
-            window.location.href  = "<%= export_payments_path(format: :csv) %>?payment_ids=" + payment_ids;
+            if($('.squaredFour input:checked').length)
+            {
+                var payment_ids = [];
+                $('.squaredFour input:checked').each(function() {
+                    payment_ids.push($(this).data('id'));
+                });
+
+                window.location.href  = "<%= export_payments_path(format: :csv) %>?payment_ids=" + payment_ids;
+            }
+            else
+            {
+                alert('Please Mark at least one Transaction');
+            }
 
         });
 
