[Bug Fixed]: Alert Message changed with Sweet Alert

--- a/app/views/payments/brand_index.html.erb
+++ b/app/views/payments/brand_index.html.erb
@@ -85,7 +85,7 @@
             }
             else
             {
-                alert('Please Mark at least one Transaction');
+                swal("Please Mark at least one Transaction")
             }
 
         });
