--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -127,7 +127,7 @@
             }
             else
             {
-                alert('Please Mark at least one Transaction');
+                swal("Please Mark at least one Transaction")
             }
 
         });
