--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -172,7 +172,7 @@
             }
             else
             {
-                alert('Please Mark at least one Campaign');
+                swal("Please Mark at least one Campaign")
             }
 
         });
