--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
   <%= stylesheet_link_tag 'application.css', media: 'all' %>
+  <%= stylesheet_link_tag 'sweetalert', media: 'all' %>
   <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'sweetalert.min' %>
   <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tag %>
