--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -263,6 +263,10 @@ input.cmn-toggle-round:checked + label:after {
     padding-left: 5px;
 }
 
+.new-campaign-button-set {
+    padding-left: 15px;
+}
+
 @media
 only screen and (max-width: 1130px) {
     .btn-export {
@@ -546,6 +550,7 @@ only screen and (max-width: 460px) {
     background-color: #e13f3c;
     color: white;
     margin-top: 5%;
+    margin-right: 20px;
     padding: 8px 28px;
     font-weight: 600;
 }
