short bia max length set to 1000

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -36,6 +36,7 @@
     font-size: 16px;
     font-weight: 600;
     overflow: hidden;
+    text-overflow: ellipsis;
     white-space: nowrap;
 }
 
@@ -50,6 +51,7 @@
 .influencer-biography {
     font-size: 13px;
     overflow: hidden;
+    text-overflow: ellipsis;
     height: 72px;
 }
 
