--- a/app/views/explores/_explores.erb
+++ b/app/views/explores/_explores.erb
@@ -8,10 +8,10 @@
                   <%= image_tag(influencer.profile_picture, class: 'img-responsive explore-search-image') %>
                 </div>
                 <div class="influencer-data">
-                  <div class="influencer-name"> <%= influencer.full_name.present? ? influencer.full_name : 'User' %> </div>
+                  <div class="influencer-name" title="<%= influencer.full_name %>"> <%= influencer.full_name %> </div>
                   <p class="influencer-address"><%= influencer.location %></p>
                   <p class="title"> <%= influencer.industry.present? ? influencer.industry : 'Entrepreneur' %></p>
-                  <p class="influencer-biography"><%= influencer.short_bio %> </p>
+                  <p class="influencer-biography"><%= truncate(influencer.short_bio, length: 100) %> </p>
                   <div>
                     <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;<%= influencer.max_followers %>
                   </div>
