disable star, stash icon if there is no offer to show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -267,6 +267,10 @@
 
 // ========================== bind for pubnub NEW_OFFER event =================================
         PUBNUB_CLIENT.events.bind("NEW_OFFER", function (message) {
+//            enable offer star and delete button
+            $('.make-all-stared').removeClass('disable');
+            $('.delete-selected-offer').removeClass('disable');
+
             console.log('===================== NEW_OFFER pubnub event fire successfully ===========');
             $.ajax({
                 type: 'get',
