check where is influence is active or not before  show there profile or send offer

--- a/app/views/influencers/show.js.erb
+++ b/app/views/influencers/show.js.erb
@@ -1,2 +1,6 @@
-$('#profile-modal').html("<%= j render(:partial => 'influencers/profile_modal', :locals => { influencer: @influencer}) %>");
-$('#show-brands-profile').modal('show');
+<% if @influencer.is_active? %>
+    $('#profile-modal').html("<%= j render(:partial => 'influencers/profile_modal', :locals => { influencer: @influencer}) %>");
+    $('#show-brands-profile').modal('show');
+<% else %>
+    alert('Sorry this user is not active now. Please chose others');
+<% end %>
