make influencer profile followers to likes

--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -28,7 +28,7 @@
             </div>
             <div class="follower-box pull-right">
               <span class="follower-number"><%= influencer.max_followers %></span>
-              <p> Followers</p>
+              <p> Likes</p>
             </div>
           </div>
         </div>
