--- a/app/views/influencers/show.js.erb
+++ b/app/views/influencers/show.js.erb
@@ -2,5 +2,5 @@
     $('#profile-modal').html("<%= j render(:partial => 'influencers/profile_modal', :locals => { influencer: @influencer}) %>");
     $('#show-brands-profile').modal('show');
 <% else %>
-    alert('Sorry this user is not active now. Please chose others');
+    alert('Sorry this user is not active now. Please choose others');
 <% end %>
