--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -1,6 +1,6 @@
 <script type="text/x-handlebars" id="set-facebook-activity-template">
     <div class="modal fade" id="SetFacebookActivity" role="dialog">
-      <div class="modal-dialog">
+      <div class="modal-dialog fb-activity-modal-dialog">
         <div class="modal-content profile-image-modal-content">
           <div class="modal-header profile-image-modal-header set-facebook-activity">
             <a href="#"><%= image_tag('Logo.png', :class => 'img-responsive login-modal-logo', :alt => 'logo') %></a>
