[Bug Fixed]: Tooltip added for Log out button

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1185,5 +1185,16 @@ h5, .h5 {
   color: #ff305a;
 }
 
+.about-welcome .popover-title {
+  background-color: white;
+  color: #0072b1;
+  border-bottom: none;
+  text-align: center;
+}
+
+.about-welcome .popover-content {
+  padding: 0;
+}
+
 // faq page style sheet
 
