--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -88,7 +88,7 @@
 
 <script>
     $(document).ready(function () {
-        $('[data-toggle="popover"]').popover({trigger: 'hover', placement: "auto bottom"});
+        $('[data-toggle="popover"]').popover({trigger: 'hover', placement: "bottom"});
 
         $('#about a').click(function(){
             $('html, body').animate({
