--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -164,6 +164,22 @@
         var social_account_index = $('#social_account').find('option:selected').index();
         var costs = <%= @costs %>;
 
+        if (costs.length) {
+            // Dont change value 0..3 here, they are post types of campaign. if need any change then synchronize with enum in Campaign model
+            if (this.value == 0) {
+                $('#post_cost').val(costs[social_account_index][0]);
+            }
+            else if (this.value == 1) {
+                $('#post_cost').val( costs[social_account_index][1] );
+            }
+            else if (this.value == 2) {
+                $('#post_cost').val(costs[social_account_index][2]);
+            }
+            else if (this.value == 3) {
+                $('#post_cost').val(costs[social_account_index][3]);
+            }
+        }
+
         $('#social_account').change(function() {
             social_account_index = $('#social_account').find('option:selected').index();
             $('#post_type option:first').prop('selected', 'selected');
