[Bug Fixed]: Margin below 'Pricing' decreased

--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -45,9 +45,8 @@
         <% if influencer.active_facebook_accounts.present? %>
 
             <h4> Pricing</h4>
-            <br>
 
-            <div class="row">
+            <div class="row pricing-section">
               <div class="col-md-12">
                 <div class="social-account-tabs">
                   <ul class="nav nav-tabs social-account-nav-tabs influencer-social-account-nav-tabs">
