offer message show issues solved

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   <script id="message-template" type="text/x-handlebars-template">
     <div class="message message-{{campaign_id}}">
       <img src="{{sender_profile_picture_url}}" class='inbox-logo-responsive'>
-      <span class="title">{{body}}</span>
+      <span class="message-body">{{body}}</span>
     </div>
   </script>
 
