--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1196,5 +1196,11 @@ h5, .h5 {
   padding: 0;
 }
 
+.message-body{
+  display: inline-block;
+  margin: 5px 0 0 10px;
+  max-width: 90%;
+}
+
 // faq page style sheet
 
