update unread message count on offer delete

--- a/app/views/offers/delete_offers.js.erb
+++ b/app/views/offers/delete_offers.js.erb
@@ -15,5 +15,6 @@ $(function(){
         console.log('now there is no offer remains');
         disableOfferDeleteStartIcon();
     }
-
+// update unread message count
+    updateUnreadMessage();
 });
