facebook account remove issues solve

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -115,6 +115,7 @@
 <%= render partial: 'shared/sign_up_modal'%>
 <%= render partial: 'shared/sign_in_modal'%>
 <%= render partial: 'shared/sign_up_success_message'%>
+<%= render partial: 'shared/forgote_password'%>
 
 </body>
 </html>
