--- a/app/views/shared/_forgote_password.erb
+++ b/app/views/shared/_forgote_password.erb
@@ -8,7 +8,7 @@
       <div class="modal-body model-iner">
         <div class="row">
           <div class="col-md-12">
-            <div class="errors" style="margin-bottom: 5px;"></div>
+            <div class="errors"></div>
             <form novalidate="" data-parsley-validate="true" class="new_user" id="new_user" action="/users/password" accept-charset="UTF-8" data-remote="true" method="post">
               <input name="utf8" value="✓" type="hidden">
 
