--- a/app/views/shared/_sign_in_form.html.erb
+++ b/app/views/shared/_sign_in_form.html.erb
@@ -1,7 +1,4 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<style>
-
-</style>
 <div class="modal-body model-iner">
   <div class="row">
     <div class="col-md-12">
@@ -40,7 +37,7 @@
           SUBMIT
         </button>
 
-        <%= link_to 'Forgot your password', new_password_path(:user) %><br />
+        <%= link_to 'Forgot your password', '#forgotpassword', data: {toggle: 'modal', dismiss: 'modal'} %><br/>
       </form>
     </div>
   </div>
