--- a/app/views/shared/_forgot_password.erb
+++ b/app/views/shared/_forgot_password.erb
@@ -1,14 +1,16 @@
 <div class="modal fade" id="forgotpassword">
   <div class="modal-dialog modal-md">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header close-image">
         <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button"></button>
         <h3 class="modal-title">Reset Password</h3>
       </div>
       <div class="modal-body model-iner">
         <div class="row">
           <div class="col-md-12">
-            <div class="errors"></div>
+            <div id="" class="text-danger validation-error"></div>
+            <div id="" class="text-success success-message"></div>
+            </br>
             <form novalidate="" data-parsley-validate="true" class="new_user" id="new_user" action="/users/password" accept-charset="UTF-8" data-remote="true" method="post">
               <input name="utf8" value="✓" type="hidden">
 
@@ -16,10 +18,9 @@
 
               <div class="input_container">
                 <div class="label_l">Email</div>
-                <input data-parsley-id="4091" class="login_input" name="user[email]" id="user_email" type="text">
-                <ul id="parsley-id-4091" class="parsley-errors-list"></ul>
+                <input data-parsley-id="4091" data-parsley-required="true" class="login_input" name="user[email]" id="user_email" type="text">
               </div>
-              <button class="btn btn-default save_btn" type="submit">SUBMIT</button>
+              <button class="btn btn-modal-submit" type="submit">SUBMIT</button>
               <p class="forgot_pwd">&nbsp;</p>
             </form>
           </div>
