--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,27 +1,21 @@
-<h2>Change your password</h2>
 <div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper">
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+  <h2>Change your password</h2>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), data: {:'parsley-validate' => ''},html: {method: :put}) do |f| %>
       <%= devise_error_messages! %>
       <%= f.hidden_field :reset_password_token %>
 
-      <div class="field">
-        <%= f.label :password, "New password" %><br />
-        <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+      <div class="input_container">
+        <div class="label_l">New password</div>
+        <input class="login_input" id="user_password" type="password" name="user[password]" autocomplete="off" autofocus="autofocus" data-parsley-required="true" data-parsley-trigger="change">
       </div>
-
-      <div class="field">
-        <%= f.label :password_confirmation, "Confirm new password" %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      <div class="input_container">
+        <div class="label_l">Confirm new password</div>
+        <input class="login_input" id="user_password_confirmation" type="password" name="user[password_confirmation]" autocomplete="off" data-parsley-required="true" data-parsley-trigger="change">
       </div>
 
       <div class="actions">
-        <%= f.submit "Change my password" %>
+        <button class="btn btn-modal-submit" type="submit">SUBMIT</button>
       </div>
   <% end %>
-
-  <%= render "devise/shared/links" %>
 </div>
 
