--- a/app/views/offers/_offer.erb
+++ b/app/views/offers/_offer.erb
@@ -33,16 +33,18 @@
               <%= link_to 'Accept', accept_offer_path(offer, authenticity_token: form_authenticity_token), class: 'btn btn-accept hidden', method: :put, remote: true %>
               <%= link_to 'Deny', deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'deny hidden', method: :put, remote: true %>
               <%= link_to 'Undo Deny', undo_deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'undo-deny', method: :put, remote: true %>
-          <% else %>
+          <% elsif offer.accepted? %>
               <span class="text-success">Accepted Campaign</span>
+          <% elsif offer.engaged? %>
+              <span class="text-success">Running Campaign</span>
           <% end %>
       <% else %>
           <% if offer.accepted? %>
-              <% unless offer.card_number? %>
-                  <%= link_to 'Engage', new_brand_payment_campaigns_path(offer.id), class: 'btn btn-accept button-border-blue', method: :post %>
-              <% else %>
-                  <span class="text-success">Running Campaign</span>
-              <% end %>
+              <%= link_to 'Engage', new_brand_payment_campaigns_path(offer.id), class: 'btn btn-accept button-border-blue' %>
+          <% elsif offer.engaged? %>
+              <span class="text-success">Running Campaign</span>
+          <% elsif offer.denied? %>
+              <span class="text-danger">Offer denied</span>
           <% else  %>
               Pending request
           <% end %>
