--- a/app/views/offers/_offer.erb
+++ b/app/views/offers/_offer.erb
@@ -35,7 +35,7 @@
                   <%= link_to 'Deny', deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'deny hidden', method: :put, remote: true %>
                   <%= link_to 'Undo Deny', undo_deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'undo-deny', method: :put, remote: true %>
               <% else %>
-                  <span class="text-success">Accepted Campaign</span>
+                  <span class="text-danger">Denied Campaign</span>
               <% end %>
           <% elsif offer.engaged? %>
               <span class="text-success">Running Campaign</span>
