[Bug Fixed]: Multiple times click on button disabled on View Profile button

--- a/app/views/bank_accounts/_add_bank_account.html.erb
+++ b/app/views/bank_accounts/_add_bank_account.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag 'payments', media: 'all' %>
+
 <div class="modal fade" id="AddBankAccount" role="dialog" >
   <div class="modal-dialog withdraw-modal-dialog">
 
