--- a/app/views/explores/_explores.erb
+++ b/app/views/explores/_explores.erb
@@ -16,7 +16,7 @@
                     <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;<%= influencer.max_followers %>
                   </div>
                 </div>
-                <%= link_to 'VIEW PROFILE', influencer_path(influencer), remote: true, :class => "btn btn-primary btn-view-profile" %>
+                <%= link_to 'VIEW PROFILE', influencer_path(influencer), remote: true, :class => 'btn btn-primary btn-view-profile', :onclick => "this.disabled='disabled'" %>
               </div>
             </div>
         <% end %>
