--- a/app/views/influencer_payments/index.html.erb
+++ b/app/views/influencer_payments/index.html.erb
@@ -47,7 +47,7 @@
     <% end %>
   </table>
 
-  <%= link_to '<i class="fa fa-plus"></i>&nbsp; Add Bank Account'.html_safe, new_bank_account_path, remote: true, :class => 'add-bank-account' %>
+  <%= link_to '<i class="fa fa-plus"></i>&nbsp; Add Bank Account'.html_safe, new_bank_account_path, remote: true, :class => 'add-bank-account', :onclick => "this.disabled='disabled'" %>
 
 </div>
 
